@@ -125,3 +125,9 @@
 	* Additions:
 	    - minor test additions (Leo Toetsch)
 
+2002-08-05
+
+	* Fixes:
+	    - update exception-handling code to work w/ new subs
+	    - update anonymous subs, too
+	
